<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShopClient</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- 登录界面 -->
    <string name="shopLogin">商家登录</string>
    <string name="account">帐号:</string>
    <string name="password">密码:</string>
    <string name="forgetPassword"><u>忘记密码?</u></string>
    <string name="accountHint">请输入手机号码</string>
    <string name="passwordHint">请输入密码</string>
    <string name="login">登录</string>
    <string name="rememberPwd">记住密码</string>
    <string name="autoLogin">自动登录</string>
    <!-- 首页 -->
    <string name="mainPage">首页</string>
    <string name="orderManagement">订单管理</string>
    <string name="dishManagement">菜品管理</string>
    <string name="shopInfo">店铺信息</string>
    <string name="salesAcount">销量统计</string>
    <string name="clickTochangeState">点击切换状态</string>
    <!-- 订单管理 -->
    <string name="dealing">未处理</string>
    <string name="dealed">已处理</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 下拉刷新 -->
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>

    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <!-- 找回密码 -->
    <string name="title_activity_find_pwd_activity1">找回密码</string>
    <string name="find_phone_num">手机号码:</string>
    <string name="find_check_code">验证码:</string>
    <string name="find_get_code">获取验证码</string>
>        <string name="ensure">确定</string>
>        <string name="cancel">取消</string>
    <string name="title_activity_find_pwd_activity2">修改密码</string>
    <string name="new_pwd">新密码</string>
    <string name="re_new_pwd">确认密码</string>
    <string name="title_activity_order_detail">订单详情</string>
    <!--订单详情-->
    <string name="finish">完成</string>



</resources>
