<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.tmp.shopclient.ui.views.FindPwdActivity1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_find_phone_num"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:text="@string/find_phone_num"
        android:layout_alignParentStart="true"
        android:textSize="18sp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:id="@+id/et_find_phone_num"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="58dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_check_code"
        android:id="@+id/tv_find_check_num"
        android:layout_below="@+id/et_find_phone_num"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18sp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:id="@+id/et_find_check_num"
        android:layout_alignTop="@+id/tv_find_check_num"
        android:layout_alignLeft="@+id/et_find_phone_num"
        android:layout_alignStart="@+id/et_find_phone_num"
        android:layout_marginLeft="58dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_get_code"
        android:id="@+id/btn_find_get_code"
        android:layout_below="@+id/et_find_check_num"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ensure"
        android:id="@+id/btn_ensure"
        android:layout_below="@+id/btn_find_get_code"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="113dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/btn_cancel"
        android:layout_alignTop="@+id/btn_ensure"
        android:layout_alignRight="@+id/et_find_check_num"
        android:layout_alignEnd="@+id/et_find_check_num" />
</RelativeLayout>
